@startuml

title __LOGIC's Class Diagram__\n

  namespace com.example.asproj {
    namespace logic {
      class com.example.asproj.logic.MainActivityLogic {
          {static} - SAVED_CURRENT_ID : String
          - currentItemIndex : int
          - infoList : List<HiTabBottomInfo<?>>
          + MainActivityLogic()
          + getFragmentTabView()
          + getHiTabBottomLayout()
          + getInfoList()
          + onSaveInstanceState()
          - initFragmentTabView()
          - initTabBottom()
      }
    }
  }
  

  namespace com.example.asproj {
    namespace logic {
      interface com.example.asproj.logic.MainActivityLogic.ActivityProvider {
          {abstract} + findViewById()
          {abstract} + getResources()
          {abstract} + getString()
          {abstract} + getSupportFragmentManager()
      }
    }
  }
  

  com.example.asproj.logic.MainActivityLogic o-- com.example.asproj.logic.MainActivityLogic.ActivityProvider : activityProvider
  com.example.asproj.logic.MainActivityLogic o-- com.example.common.tab.HiFragmentTabView : fragmentTabView
  com.example.asproj.logic.MainActivityLogic o-- com.example.hi_ui.ui.tab.bottom.HiTabBottomLayout : hiTabBottomLayout
  com.example.asproj.logic.MainActivityLogic +-down- com.example.asproj.logic.MainActivityLogic.ActivityProvider


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
